# Cod4x_DiscordMessageLogger_Plugin

Cod4x_DiscordMessageLogger_Plugin_v1.0.0/: CMakeLists.txt  version.h.in
Cod4x_DiscordMessageLogger_Plugin_v1.0.0/includes/: DiscordLogger.hpp  LoggerHandler.hpp  MessageLogger.hpp
Cod4x_DiscordMessageLogger_Plugin_v1.0.0/libs/: pinc.h
Cod4x_DiscordMessageLogger_Plugin_v1.0.0/src/: Cod4x_DiscordMessageLogger_Plugin.cpp  DiscordLogger.cpp  LoggerHandler.cpp  MessageLogger.cpp
Cod4x_DiscordMessageLogger_Plugin_v2.0.0/: CMakeLists.txt
Cod4x_DiscordMessageLogger_Plugin_v2.0.0/Plugin/: CMakeLists.txt  version.h.in
Cod4x_DiscordMessageLogger_Plugin_v2.0.0/Plugin/includes/: Queue.hpp
Cod4x_DiscordMessageLogger_Plugin_v2.0.0/Plugin/libs/: pinc.h
Cod4x_DiscordMessageLogger_Plugin_v2.0.0/Plugin/src/: Plugin.cpp  Queue.cpp
Cod4x_DiscordMessageLogger_Plugin_v2.0.0/Server/: CMakeLists.txt
Cod4x_DiscordMessageLogger_Plugin_v2.0.0/Server/cmake/: FindDPP.cmake
Cod4x_DiscordMessageLogger_Plugin_v2.0.0/Server/includes/: DiscordBot.hpp  JSON.hpp  Queue.hpp  Signal.hpp  Thread.hpp
Cod4x_DiscordMessageLogger_Plugin_v2.0.0/Server/src/: DiscordBot.cpp  JSON.cpp  Queue.cpp  Server.cpp  Signal.cpp  Thread.cpp
